--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -2,3 +2,11 @@
   margin-top: 0;
   font-size: $font-size;
 }
+
+@mixin btn-variant($color, $background) {
+  color: $color;
+  background-color: $background;
+  padding: 5px 28px;
+  border-radius: 80px;
+  border: $primary-color solid 1px;
+}
